# layout-insertion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  block_layout_config_mapping.csv  clean.py  color_config.py  color_pipeline.py  config.py  constants.py  database.ini  docker-compose.yml  docker-run.md  duo_color_insertion.py  duo_figure_insertion.py  figma.py  generate_index_mapping_sql.py  insert_block_layout_config.py  insert_palette.py  log_utils.py  logger.py  manage.py  match_block_layout_presentation_palette.py  monochrome_color_insertion.py  monochrome_figure_insertion.py  output.json  parse_block_layouts_and_populate_index_config.py  presentation_palette_mapping.csv  pyproject.toml  requirements.txt  schema.prisma  slide_deletion.py  slide_insertion.py  slide_layout_index_config_mapping.csv  sql_pollution.py  utils.py
api_v1/: constants.py  implemented.py  serializers.py  urls.py  views.py  views_ver_1.py  views_ver_2.py
config/: settings.py  urls.py
configuration/: __init__.py  defaults.py  env.py  figma.py  mappings.py  output.py  precompiled_images.py  sql_templates.py  types.py
const_dir/: blocks.py  slides.py
constants/: constants.py  sql_templates.py
db_work/: add_or_update_presentation_layout_id.py  constants.py  database.py  db-work.md  db_utils.py  db_work.py  executor.py  implemented.py  readme.md  services.py  utils.py
django_app/: django.md  manage.py
django_script/: figma_service_ver_2.py
figma_api/: manage.py
figma_integration/: __init__.py  base.py  cli.py  figma_extractor.py  filters.py  (+3 more)
(+283 files in other folders)
